<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"
            />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/friends"/>


    </group>
    <item android:title="other">

        <menu>
            <item
                android:id="@+id/activity_status"
                android:title="Activity Status"
                android:icon="@drawable/ic_active"
                 />
            <item
                android:id="@+id/share_app"
                android:title="Share Link"
                android:icon="@drawable/ic_share_black_24dp" />
            <item
                android:id="@+id/rate_app"
                android:title="Rate This App"
                android:icon="@drawable/ic_stars_black_24dp" />
            <item
                android:id="@+id/remove_account"
                android:title="Remove Account"
                android:icon="@drawable/ic_delete_sweep_black_24dp" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="Logout"
                />


        </menu>
    </item>

</menu>
